plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '23'
targetCompatibility = '23'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec) {
    jvmArgs('-Xmx32g')
}

tasks.withType(Test) {
    jvmArgs('-Xmx16g')
}

application {
    mainModule = 'com.example.danmarkskort'
    mainClass = 'com.example.danmarkskort.App'
    applicationDefaultJvmArgs = ['-Dstdout.encoding=UTF-8', '-Dstderr.encoding=UTF-8']
}

javafx {
    version = '23.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}
 

dependencies {
    implementation('org.controlsfx:controlsfx:11.2.1')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'org.junit.jupiter:junit-jupiter:5.11.1'


    implementation 'com.itextpdf:itextpdf:5.5.13.3'
    implementation 'net.sf.trove4j:trove4j:3.0.3'
}

run {
    enableAssertions = true
}

sourceSets {
    test {
        java {
            srcDir "src/test/java"
        }
    }
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}